tests/baselines/reference/structBodyWithStatements.errors.txt
tests/cases/conformance/structs/structDeclarations/structBody/structBodyWithStatements.ts(2,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/structs/structDeclarations/structBody/structBodyWithStatements.ts(3,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/structs/structDeclarations/structBody/structBodyWithStatements.ts(6,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/structs/structDeclarations/structBody/structBodyWithStatements.ts(7,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/structs/structDeclarations/structBody/structBodyWithStatements.ts (4 errors) ====
    struct C {
        var x = 1; // error
        ~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    struct C2 {
        function foo() {} // error
        ~~~~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var x = 1;
    var y = 2;
    struct C3 {
        x: number = y + 1; // ok, need a var in the statement production
    }